--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AndroidUnitTestingDemo"
         tools:targetApi="31">
         <activity
-            android:name=".ViewBasedActivity"
+            android:name=".views.ViewBasedActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true" >
             <intent-filter>
